@@ -7,7 +7,6 @@ import co.kr.muldum.domain.model.LogType;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class HistoryLogPersistenceAdapter implements LoadHistoryLogPort {
@@ -22,13 +21,13 @@ public class HistoryLogPersistenceAdapter implements LoadHistoryLogPort {
     public List<HistoryLog> findByType(LogType type) {
         return historyLogJpaRepository.findByTypeOrderByLoggedAtDesc(type).stream()
                 .map(HistoryLogMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<HistoryLog> findAll() {
         return historyLogJpaRepository.findAllByOrderByLoggedAtDesc().stream()
                 .map(HistoryLogMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
